[workspace]
members = ["macros"]

[package]
name = "bevy-yoleck"
description = "Your Own Level Editor Creation Kit"
version = "0.31.0"
edition = "2021"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/idanarye/bevy-yoleck"
documentation = "https://docs.rs/bevy-yoleck"
readme = "README.md"
categories = ["game-development"]
keywords = ["bevy", "gamedev", "level-editor"]
exclude = ["assets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-yoleck-macros = { version = "0.9.1", path = "macros" }
bevy = { version = "^0.17", default-features = false, features = [
    "bevy_state",
    "bevy_window",
    "bevy_asset",
    "bevy_log",
] }
bevy_egui = { version = "^0.38", default-features = false, features = [
    "default_fonts",
    "render",
] }
serde = "^1"
serde_json = "^1"
thiserror = "^2"
uuid = "1.9.1"

[features]
bevy_reflect = []
vpeol = []
vpeol_2d = ["vpeol", "bevy/bevy_text", "bevy/bevy_sprite", "bevy/png"]
vpeol_3d = ["vpeol", "bevy/bevy_pbr"]
example2d_full = [
    "vpeol_2d",
    "bevy/bevy_gizmos",
    "bevy/bevy_sprite_render",
]
example3d_full = [
    "vpeol_3d",
    "bevy/bevy_scene",
    "bevy/bevy_gltf",
    "bevy/animation",
    "bevy/ktx2",
    "bevy/zstd_rust",
    "bevy/tonemapping_luts",
    "bevy/bevy_gizmos",
    "bevy/reflect_auto_register",
    "bevy/bevy_sprite_render",
]
doors_to_other_levels_full = ["vpeol_2d", "bevy/bevy_sprite_render"]

[dev-dependencies]
bevy = { version = "^0.17", default-features = false, features = [
    "bevy_sprite",
    "x11",
    "bevy_window",
    "bevy_text",
    "bevy_render",
] }

[[example]]
name = "example2d"
required-features = ["example2d_full"]

[[example]]
name = "example3d"
required-features = ["example3d_full"]

[[example]]
name = "doors_to_other_levels"
required-features = ["doors_to_other_levels_full"]

[package.metadata.docs.rs]

all-features = true
features = [
    "bevy/x11",       # required for bevy_egui
    "bevy/bevy_gltf", # required for SceneRoot in vpeol_3d's doctests
]
