[package]
name = "bevy-yoleck-macros"
description = "Macros for bevy-yoleck"
version = "0.9.1"
edition = "2021"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/idanarye/bevy-yoleck"
documentation = "https://docs.rs/bevy-yoleck"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
