[package]
name = "bevy-yoleck-macros"
description = "Macros for bevy-yoleck"
version = "0.9.1"
edition = "2021"
authors = ["dexsper <dexsperpro@gmail.com>", "IdanArye <idanarye@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dexsper/bevy-yoleck-fork"
documentation = "https://docs.rs/bevy-yoleck"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
