[package]
name = "bevy-yoleck-macros"
description = "Macros for bevy-yoleck"
version = "0.9.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
